--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM5xQbuveZJAwK8xBf2SXi+",
+      "authorship_tag": "ABX9TyP8DDg9O2+mRos+YfnnOQgF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,10 +260,20 @@
     {
       "cell_type": "code",
       "source": [
-        "#import Layer use In train autoencoder input layers MaxPooling2D layer and Con2D layeers\n",
-        "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D\n",
-        "#from tenserflow import  model\n",
-        "from tensorflow.keras.models import Model"
+        "# Import necessary layers from TensorFlow Keras\n",
+        "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D, Flatten, Reshape\n",
+        "\n",
+        "# Import the Model class from TensorFlow Keras\n",
+        "from tensorflow.keras.models import Model\n",
+        "\n",
+        "# Example usage:\n",
+        "# These are some of the layers typically used in training an autoencoder:\n",
+        "# - Input: Defines the input layer shape for the autoencoder.\n",
+        "# - Conv2D: Creates a 2D convolutional layer, which is essential for feature extraction.\n",
+        "# - MaxPooling2D: Downsamples the input representation, reducing its dimensionality.\n",
+        "# - UpSampling2D: Upsamples the input representation, used in the decoder part of an autoencoder.\n",
+        "# - Flatten: Flattens the input, converting it into a 1D array, often used before a Dense layer in a classifier.\n",
+        "# - Reshape: Reshapes the input tensor to a specified shape.\n"
       ],
       "metadata": {
         "id": "ffHBbbXChtAD"
@@ -274,17 +284,158 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Architecture of Auto-encoder"
+        "## Architecture of Convolutional  Auto-encoder"
       ],
       "metadata": {
         "id": "zRfZ4XPSj_nl"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Input_layer"
+      ],
+      "metadata": {
+        "id": "kNPEs5LxL-xs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input_layer_cnv is a variable that will store the input layer of our model\n",
+        "\n",
+        "# Input is a function that creates a placeholder for the input data\n",
+        "# shape=(28, 28, 1) means the input data will be 28x28 pixels with 1 channel (like a grayscale image)\n",
+        "input_layer_cnv = Input(shape=(28, 28, 1))\n"
+      ],
+      "metadata": {
+        "id": "l_ACakCGkA0n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Encoder part_Architecture"
+      ],
+      "metadata": {
+        "id": "rnWqmZVYMDf3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ae_cnv_en is a variable that will store the result of applying a convolutional layer to the input_layer_cnv\n",
+        "\n",
+        "# Conv2D is a function that creates a convolutional layer for 2D data (like images)\n",
+        "# 32 is the number of filters (features) this layer will learn\n",
+        "# (3, 3) means each filter is a 3x3 square\n",
+        "# activation='relu' means we'll use the ReLU function to add non-linearity\n",
+        "# padding='same' means the output size will be the same as the input size, by adding zero-padding around the edges\n",
+        "# input_layer_cnv is the data we're applying this layer to (our input image or previous layer's output)\n",
+        "ae_cnv_en = Conv2D(32, (3, 3), activation='relu', padding='same')(input_layer_cnv)\n",
+        "\n",
+        "# MaxPooling2D is a function that downsamples the input\n",
+        "# (2, 2) means it will look at 2x2 blocks of the input\n",
+        "# padding='same' means the output size will be the same as the input size, by adding zero-padding around the edges\n",
+        "# ae_cnv_en is the data we're applying this layer to (the output from the previous Conv2D layer)\n",
+        "ae_cnv_en = MaxPooling2D((2, 2), padding='same')(ae_cnv_en)\n",
+        "\n",
+        "# Apply another Conv2D layer with the same parameters as the first one\n",
+        "ae_cnv_en = Conv2D(32, (3, 3), activation='relu', padding='same')(ae_cnv_en)\n",
+        "\n",
+        "# Apply another MaxPooling2D layer with the same parameters as the previous one\n",
+        "ae_cnv_en = MaxPooling2D((2, 2), padding='same')(ae_cnv_en)\n",
+        "\n",
+        "# Apply a final Conv2D layer with fewer filters (4 instead of 32)\n",
+        "ae_cnv_en = Conv2D(4, (3, 3), activation='relu', padding='same')(ae_cnv_en)\n",
+        "\n",
+        "# Apply a final MaxPooling2D layer with the same parameters as the previous ones\n",
+        "ae_cnv_en = MaxPooling2D((2, 2), padding='same')(ae_cnv_en)"
+      ],
+      "metadata": {
+        "id": "yzuRX4t18uQv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Bottleneck (Latent Representation):"
+      ],
+      "metadata": {
+        "id": "O9ChLPnpIa3s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## # Use Flatten method to convert 2D data to 1D\n",
+        "# This step typically represents the output of the encoder, which flattens the 2D convolutional output into a 1D vector.\n",
+        "# It serves as the latent representation or bottleneck of the autoencoder, where the data is compressed.\n",
+        "# ae_cnv_en is the input data (output from the encoder layers) being flattened.\n",
+        "# 'bot' is assigned as the name for this layer in the model.\n",
+        "ae_cov_en = Flatten(name='bot')(ae_cnv_en)\n"
+      ],
+      "metadata": {
+        "id": "3EZE1GX-LRKl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Decoder_part_Architecture"
+      ],
+      "metadata": {
+        "id": "jRyY4gNwMogr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the Decoder Part\n",
+        "# First, reshape the input shape (Latent Representation) using ae_cnv_en\n",
+        "# The variable ae_cnv_de is assigned to reshape the input to (4,4,4)\n",
+        "# This layer is named \"botnext0\" and takes the latent representation as input\n",
+        "#input layer of Decoder part\n",
+        "ae_cnv_de = Reshape((4, 4, 4), input_shape=(64,), name=\"botnext0\")(ae_cnv_en)\n",
+        "\n",
+        "#\n",
+        "ae_cnv_de = Conv2D (4, (3,3), activation = \"relu\", padding = \"same\",name= \"botnext1\")(ae_cnv_de)\n",
+        "ae_cnv_de = UpSampling2D ((2,2),name= \"botnext2\")(ae_cnv_de)\n",
+        "\n",
+        "\n",
+        "ae_cnv_de = Conv2D (32, (3,3), activation = \"relu\", padding = \"same\",name= \"botnext3\")(ae_cnv_de)\n",
+        "ae_cnv_de = UpSampling2D ((2,2),name= \"botnext4\")(ae_cnv_de)\n",
+        "\n",
+        "ae_cnv_de = Conv2D (31, (3,3), activation = \"relu\", padding = \"same\",name= \"botnext5\")(ae_cnv_de)\n",
+        "ae_cnv_de = UpSampling2D ((2,2),name= \"botnext6\")(ae_cnv_de)\n",
+        "\n",
+        "#Defien The Out Put layer Of Auto encoder\n",
+        "ae_cnv_de = Conv2D (1, (3,3), activation = \"sigmoid\", padding = \"same\",name= \"botnext7\")(ae_cnv_de)\n",
+        "Ae_Conv = Model(inputs = input_layer_cnv, outputs = ae_cnv_de)\n",
+        "\n",
+        "Ae_Conv.compile(optimizer=tf.keras.optimizers.SGD(0.09,clipvalue=2.5), loss='binary_crossentropy', metrics = [\"accuracy\"])\n",
+        "# Ae_Conv.compile(optimizer=tf.keras.optimizers.Adadelta(0.1,clipvalue=2), loss='binary_crossentropy', metrics = [\"accuracy\"])\n",
+        "Ae_Conv.summary()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tnUUiWsLMoDw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "l_ACakCGkA0n"
+        "id": "UkAC5hksMoAu"
       },
       "execution_count": null,
       "outputs": []
