--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -6,7 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNOJQG/MxQn0m7eg31PiI3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,6 +430,64 @@
       ],
       "metadata": {
         "id": "tsVrZL3acMpS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test.shape"
+      ],
+      "metadata": {
+        "id": "Qo4vTpeEkNVQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "encoded_imgs = ae_conv_encoder.predict(x_test)\n",
+        "#encoded_imgs = ae_conv_encoder.predict(x_train[0:100])\n",
+        "print (encoded_imgs.shape)"
+      ],
+      "metadata": {
+        "id": "4Rm6sQtWkEX8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#decoded_imgs = ae_conv_decoder.predict(encoded_imgs)\n",
+        "decoded_imgs = ae_conv_decoder.predict(encoded_imgs)\n",
+        "\n",
+        "deoceded_images = Ae_Conv.predict(x_test)\n",
+        "print(\"Recreated image Representation of Shape {} using Decoder and reduced Image representation of shape {}\".format (decoded_imgs.shape,\n",
+        "                                                                                                                      encoded_imgs.shape))\n",
+        "n = 10  # how many digits we will display\n",
+        "k= 12 # multiplier\n",
+        "plt.figure(figsize=(20, 4))\n",
+        "for i in range(n):\n",
+        "    # display original\n",
+        "    ax = plt.subplot(2, n, i + 1)\n",
+        "    plt.imshow(x_test[i*k].reshape(28, 28))\n",
+        "    plt.gray()\n",
+        "    ax.get_xaxis().set_visible(False)\n",
+        "    ax.get_yaxis().set_visible(False)\n",
+        "\n",
+        "    # display reconstruction\n",
+        "    ax = plt.subplot(2, n, i + 1 + n)\n",
+        "    plt.imshow(decoded_imgs[i*k].reshape(28, 28))\n",
+        "    plt.gray()\n",
+        "    ax.get_xaxis().set_visible(False)\n",
+        "    ax.get_yaxis().set_visible(False)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "BWFHGrEykoio"
       },
       "execution_count": null,
       "outputs": []
