--- a/Auto_Encoders.ipynb
+++ b/Auto_Encoders.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNm7cT4C+duz0qsFtOxX8He",
+      "authorship_tag": "ABX9TyNy6uf8SSCJtZEw5fzP8VLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +37,8 @@
       },
       "outputs": [],
       "source": [
-        "from tensorflow import keras"
+        "from tensorflow import keras\n",
+        "from tensorflow.keras.optimizers import Adam"
       ]
     },
     {
@@ -126,11 +126,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#compile  the staxked autoencoder model\n",
-        "#Use binary_corossentropy Function  and Optinixer Adam\n",
+        "# Define the optimizer with a specific learning rate\n",
+        "optimizer = Adam(learning_rate=0.001)\n",
         "\n",
-        "stacked_autoencoder.compile(loss='binary_crossentropy', optimizer='adam')\n",
-        "model.summary()"
+        "# Compile the stacked autoencoder model with the optimizer\n",
+        "stacked_autoencoder.compile(optimizer=optimizer,\n",
+        "                            loss='binary_crossentropy',  # Use appropriate loss function for reconstruction\n",
+        "                            metrics=['accuracy'])\n",
+        "\n",
+        "# Print model summary\n",
+        "stacked_autoencoder.summary()"
       ],
       "metadata": {
         "id": "DLwEhamKMTZ6"
@@ -142,10 +147,89 @@
       "cell_type": "code",
       "source": [
         "#Train the model\n",
-        "stacked_autoencoder.fit(x_train, x_train, epochs=10, validation_data=(x_test, x_test))"
+        "stacked_autoencoder.fit(x_train, x_train, epochs=15, batch_size=10 ,validation_data=[x_test, x_test])"
       ],
       "metadata": {
         "id": "KuR0sQDKNE_n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Assuming stacked_autoencoder is your trained autoencoder model\n",
+        "# Assuming x_test contains your test data\n",
+        "\n",
+        "# Set the figure size\n",
+        "plt.figure(figsize=(20, 5))\n",
+        "\n",
+        "# Loop through and plot original and reconstructed images\n",
+        "for i in range(8):\n",
+        "    # Original image\n",
+        "    original = x_test[i].reshape(28, 28)\n",
+        "\n",
+        "    # Reconstructed image\n",
+        "    reconstructed = stacked_autoencoder.predict(x_test[i].reshape(1, 28, 28))[0].reshape(28, 28)\n",
+        "\n",
+        "    # Plotting original image\n",
+        "    plt.subplot(2, 8, i + 1)\n",
+        "    plt.imshow(original, cmap='binary')  # Fixed cmap='binary' instead of 'binarry'\n",
+        "    plt.title('Original')\n",
+        "\n",
+        "\n",
+        "    # Plotting reconstructed image\n",
+        "    plt.subplot(2, 8, 8 + i + 1)\n",
+        "    plt.imshow(reconstructed, cmap='binary')  # Fixed cmap='binary' instead of 'binarry'\n",
+        "    plt.title('Reconstructed')\n",
+        "\n",
+        "# Adjust layout and display plot\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "Xi-xDfclwszy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set the index of the image you want to visualize\n",
+        "i = 0\n",
+        "\n",
+        "# Set up the figure and subplots\n",
+        "plt.figure(figsize=(15, 5))\n",
+        "\n",
+        "# Plot the original image\n",
+        "plt.subplot(1, 3, 1)\n",
+        "plt.imshow(x_test[i], cmap='binary')\n",
+        "plt.title('Original Image')\n",
+        "\n",
+        "\n",
+        "# Plot the latent space representation\n",
+        "plt.subplot(1, 3, 2)\n",
+        "latent_space = encoder.predict(x_test[i].reshape(1, 28, 28))\n",
+        "plt.imshow(latent_space, cmap='binary')  # Assuming latent_space shape is (1, 30)\n",
+        "plt.title('Latent Space Representation')\n",
+        "\n",
+        "\n",
+        "# Reconstruct the image from the latent space representation\n",
+        "reconstructed = decoder.predict(latent_space)\n",
+        "plt.subplot(1, 3, 3)\n",
+        "plt.imshow(reconstructed.reshape(28, 28), cmap='binary')\n",
+        "plt.title('Reconstructed Image')\n",
+        "\n",
+        "\n",
+        "# Show the plot\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "tr5WQnaUyg1V"
       },
       "execution_count": null,
       "outputs": []
