--- a/Vanilla Autoencoder.ipynb
+++ b/Vanilla Autoencoder.ipynb
@@ -6,7 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMSYk111wmZ/wKKDlb9O837",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,8 +25,57 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/SURESHBEEKHANI/Autoencoder/blob/main/Vanilla%20Autoencoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SURESHBEEKHANI/Autoencoders/blob/main/Vanilla%20Autoencoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Autoencoders\n",
+        "\n",
+        "**Autoencoders** are a particular type of neural network, just like classifiers. Autoencoders are similar to classifiers in the sense that they compress data. However, where classifiers condense all the data of an image into a single label, autoencoders compress the data into a **latent vector**, often denoted $z$ in literature, with the goal of preserving the opportunity to recreate the exact same image in the future. Because autoencoders learn representations instead of labels, autoencoders belong to representation learning, a subfield of machine learning, but not necessarily deep learning.\n",
+        "\n",
+        "While recreating the same data from a compressed version might seem like an impossible task. However, _you_ can actually do the same. You probably have no difficulty memorizing the following sequence:\n",
+        "\n",
+        "$$1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27...$$\n",
+        "\n",
+        "I bet you haven't looked at every item, but you can still write down the sequence perfectly because you recognized a pattern: all uneven numbers, starting from 1.\n",
+        "\n",
+        "This is what autoencoders do: they find patterns in data.\n",
+        "\n",
+        "## Architecture\n",
+        "Autoencoders consist of two networks:\n",
+        "\n",
+        "* Encoder\n",
+        "* Decoder\n",
+        "\n",
+        "The goal of the **encoder** is to compress an image, video, or any piece of data that can be represented as a tensor, into a _latent vector_. The **decoder** does, as you might have guessed, the exact opposite.\n",
+        "\n",
+        "To maximize performance, minimize the loss that is, encoders and decoders are typically symmetrical together. Naturally, the input size is equal to the output size of an autoencoder.\n",
+        "\n",
+        "Autoencoders always have less input neurons in the middle layer than in the input and output layer. This is called the **bottleneck**. If it weren't for this bottleneck, the autoencoders could just copy this data over from the input to the output layer without compressing it.\n",
+        "\n",
+        "![](https://upload.wikimedia.org/wikipedia/commons/2/28/Autoencoder_structure.png) [source](https://en.wikipedia.org/wiki/File:Autoencoder_structure.png)\n",
+        "\n",
+        "## Training\n",
+        "\n",
+        "Encoders and decoders _can_ be trained separately, but usually they are trained in one go. In order to do so, one stacks the coders together in one **stacked autoencoder**.\n",
+        "\n",
+        "If one desires to train autoencoders separately, one starts by using the first hidden layer, discaring every other layer, except for the input and output layers of course. He uses the original training data at this point. Next, he uses the latent vector $z$ learnt by this mini-autoencoder and trains another autoencoder in the same way, treating the latent vectors as original data. Once the desired depth is reached, one can stack all output layers, which provided the latent vectors, together in a sinle encoder. This approach is not used in practise a lot, but literature might refer to it as greedy layerwise training so it's good to know what it means.\n",
+        "\n",
+        "## Appliciations\n",
+        "\n",
+        "While the phase \"finding patterns\" might not seem very interesting, there are a lot of exciting applications of autoencoders. We will look at three of those today:\n",
+        "\n",
+        "1. Dense autoencoder: compressing data.\n",
+        "2. Convolutional autoencoder: a building block of DCGANs, self-supervised learning.\n",
+        "3. Denoising autoencoder: removing noise from poor training data.\n",
+        "\n",
+        "While all of these applications use pattern finding, they have different use cases making autoencoders one of the most exciting topics of machine learning."
+      ],
+      "metadata": {
+        "id": "gdKGuOgtu4yN"
+      }
     },
     {
       "cell_type": "code",
@@ -40,6 +88,17 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras.optimizers import Adam"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loading the data\n",
+        "\n",
+        "We will load MNIST, but without labels because representation learning is **unsupervised**, or **self-supervised** which is the prefered"
+      ],
+      "metadata": {
+        "id": "GiRwry2pvweM"
+      }
     },
     {
       "cell_type": "code",
@@ -65,6 +124,26 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## A simple autoencoder\n",
+        "\n",
+        "Let's start by looking at the simplest possible autoencoder."
+      ],
+      "metadata": {
+        "id": "kvLtIa-6v6kF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The `encoder` is a sequential neural network with $28 \\times 28$ input neurons, $100$ neurons in the second layer and $30$ in the third. The third layer is called the \"bottleneck\". Feel free to play around with this variable to see how it affects results."
+      ],
+      "metadata": {
+        "id": "-XQqLborv_rb"
+      }
     },
     {
       "cell_type": "code",
@@ -124,6 +203,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Note that we use binary cross entropy loss in stead of categorical cross entropy. The reason for that is because we are not classifying latent vectors to belong to a particular class, we do not even have classes!, but rather are trying to predict whether a pixel should be activated or not."
+      ],
+      "metadata": {
+        "id": "xOg91M4Nwg6E"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Define the optimizer with a specific learning rate\n",
@@ -142,6 +230,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Notice how the $x$ and $y$, both $x$, `x_train` if you like, are equal:"
+      ],
+      "metadata": {
+        "id": "xeDwQ8gGwr9E"
+      }
     },
     {
       "cell_type": "code",
@@ -230,6 +327,15 @@
       ],
       "metadata": {
         "id": "tr5WQnaUyg1V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wFNjeDxoyGzj"
       },
       "execution_count": null,
       "outputs": []
