--- a/convolutional_autoencoder.ipynb
+++ b/convolutional_autoencoder.ipynb
@@ -29,6 +29,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Convolutional autoencoder\n",
+        "\n",
+        "Apart from data compression, autoencoders can also be used for self-supervised image classification.\n",
+        "\n",
+        "The first layers of the encoder learn to recognize patterns in the data very well in order to compress the data. If you don't have access to much labelled data, but a lot of unlabelled data, it's possible to train an autoencoder and copy the first layers from the autoencoder to the classifier network. This can be compared to transfer learning, where you only have to train the head afterwards.\n",
+        "\n",
+        "It is well known that convolutional layers are perfect for finding patterns in data, so it's good to know they can also be used in autoencoders. To \"de-convolve\" images in the decoder, transposed convolutional layers are used. For more information on transposed convolutional layers, checkout [this blog post](https://rickwierenga.com/blog/s4tf/s4tf-gan.html) I have written which explains them in more detail. See the last section \"Autoencoders and GANs\" of this notebook for more information on the beautiful relation between GANs and autoencoders.\n",
+        "\n",
+        "1.   List item\n",
+        "2.   List item\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tLkyJrmf0b0u"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%tensorflow_version 2.x"
@@ -88,6 +107,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Let's look at a convolutional encoder:"
+      ],
+      "metadata": {
+        "id": "BPwrHYcr0zq7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -117,6 +145,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The weights learnt by this encoder could be copied to the classifier."
+      ],
+      "metadata": {
+        "id": "e5glX1FB1LiS"
+      }
     },
     {
       "cell_type": "code",
@@ -241,7 +278,7 @@
         "figsize(15, 15)\n",
         "\n",
         "# Iterate over all filters in the last convolutional layer of the encoder\n",
-        "for i in range(8 * 8):\n",
+        "for i in range(16):\n",
         "    # Plot each filter as a subplot in an 8x8 grid\n",
         "    subplot(8, 8, i+1)\n",
         "    # Display the weights (filters) of the convolutional layer\n",
@@ -252,6 +289,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Visually not very pleasing, but proven to be effective as shown in the previous figure.\n",
+        "\n",
+        "$3 \\times 3 \\times 64=576$ is still less than $28 \\times 28 = 784$, thus creating a bottleneck, but much less compressed than the dense encoder making convolutional encoders less suitable for comporession. But thanks to their convolutional layers, they are great to use in cases where you want your autoencoder to find visual patterns in your data."
+      ],
+      "metadata": {
+        "id": "kXM920jz1ddc"
+      }
     }
   ]
 }
