--- a/Vanilla Autoencoder.ipynb
+++ b/Vanilla Autoencoder.ipynb
@@ -333,15 +333,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "wFNjeDxoyGzj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Calculate sparsity_lower: This calculates the proportion of zero elements in a 28x28 matrix\n",
         "# where 30 elements are zero.\n",
@@ -360,6 +351,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "That's 96.2% compression!"
+      ],
+      "metadata": {
+        "id": "rhlzwACnGGj8"
+      }
     }
   ]
 }
